--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "std-hello"
+name = "blinky"
 version = "0.1.0"
 authors = ["xi xiao <tdxiaoxi2@gmail.com>"]
 edition = "2021"
@@ -13,25 +13,16 @@ opt-level = "s"
 debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
-[features]
-default = ["std", "embassy", "esp-idf-svc/native"]
-
-pio = ["esp-idf-svc/pio"]
-std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
-alloc = ["esp-idf-svc/alloc"]
-nightly = ["esp-idf-svc/nightly"]
-experimental = ["esp-idf-svc/experimental"]
-embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
-
 [dependencies]
 log = { version = "0.4", default-features = false }
-esp-idf-svc = { version = "0.48", default-features = false }
+esp-idf-svc = "0.48"
 esp-idf-sys = { version = "0.34.1", features = ["binstart"] }
 esp-idf-hal = "0.43.1"
-esp-println = { version = "0.9.1", features = ["esp32c3"] }
+embedded-svc = "0.27"
+anyhow = "1.0.82"
 
-[patch.crates-io]
-esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
+# [patch.crates-io]
+# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
 
 [build-dependencies]
 embuild = "0.31.3"
